# executor

./: .env.example  .gitignore  README.md  docker-compose.production.yml  docker-compose.yml  ghost_client.py
.github/workflows/: deploy.yml
api/: .dockerignore  Dockerfile  app.py  pyproject.toml
executor/: Dockerfile  app.py  pyproject.toml
