[tool.poetry]
name = "executor-api"
version = "0.1.0"
description = "The API interface for the Python Executor."

license = "MIT"
authors = [
    "Daniel Leal <dlleal@uc.cl>",
]

readme = "README.md"
repository = "https://github.com/daleal/executor"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
gunicorn = "^20.0.4"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
